--- a/pa03_b.ipynb
+++ b/pa03_b.ipynb
@@ -49,12 +49,21 @@
     "y_test = np.squeeze(np.load('data/test_labels.npy'))\n",
     "\n",
     " # Normalize training features\n",
+    "X_train = np.array(X_train)\n",
+    "c = np.expand_dims(np.amax(X_train, axis=1),axis=1)\n",
+    "X_train = X_train / c \n",
     "\n",
     "\n",
     " # Normalize validation features\n",
+    "X_val = np.array(X_val)\n",
+    "c = np.expand_dims(np.amax(X_val, axis=1),axis=1)\n",
+    "X_val = X_val / c \n",
     "\n",
     "\n",
     " # Normalize testing features"
+    "X_test = np.array(X_test)\n",
+    "c = np.expand_dims(np.amax(X_test, axis=1),axis=1)\n",
+    "X_test = X_test / c \n",
    ]
   },
   {
@@ -65,24 +74,26 @@
    "source": [
     "model = Sequential()\n",
     "#input layer\n",
-    "model.add(Dense(a, input_shape=(784,), activation=\"sigmoid\")) # replace 'a' with the number of hidden neurons\n",
+    "model.add(Dense(64, input_shape=(784,), activation=\"sigmoid\")) # replace 'a' with the number of hidden neurons\n",
     "# you want in first hidden layer\n",
-    "model.add(Dense(b, activation=\"sigmoid\")) # replace 'b' with number of neurons you want in second hidden layer\n",
+    "model.add(Dense(64, activation=\"sigmoid\")) # replace 'b' with number of neurons you want in second hidden layer\n",
     "# copy paste the above line multiple times to add as much number of layers you want.\n",
     "\n",
     "# output layer\n",
     "model.add(Dense(1, activation=\"sigmoid\"))\n",
     "\n",
-    "opt = SGD(lr=c) # replace 'c' with the learning rate you want\n",
+    "opt = SGD(lr=0.01) # replace 'c' with the learning rate you want\n",
     "model.compile(optimizer=opt, loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "\n",
     "# Training and Validation\n",
-    "H = model.fit  (X_train, y_train, epochs=d, batch_size=1, validation_data = (X_val,y_val))\n",
+    "H = model.fit  (X_train, y_train, epochs=100, batch_size=1, validation_data = (X_val,y_val))\n",
     "# replace 'd' with the number of epochs you want to train the model\n",
     "\n",
     "# Testing\n",
-    "model.evaluate(X_test,y_test, batch_size = 1)"
+    "model.evaluate(X_test,y_test, batch_size = 1)\n"
+    "print("Test Loss:", test_loss)\n"
+    "print("Test Accuracy:", test_acc)\n"
    ]
   }
  ],
